Bug 1913279 - Fix vertical tabs issue with selected tab not scrolling on overflow r=tabbrowser-reviewers,desktop-theme-reviewers,dao
* Remove condition in tabs.js that prohibited overflow attribute being added for vertical orientation
* Remove redundant overflow-y:auto for #tabbrowser-arrowscrollbox and set a min-height for vertical tabs

Differential Revision: https://phabricator.services.mozilla.com/D221133

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -712,6 +712,10 @@ tab-group {
     border-bottom: .5px solid transparent;
   }
 
+  &[orient="horizontal"] {
+    min-width: 1px;
+  }
+
   &:not([scrolledtostart])::part(overflow-start-indicator) {
     margin-inline: -.5px -6.5px;
   }
@@ -776,7 +780,7 @@ tab-group {
 /* Vertical tabs styling */
 
 #tabbrowser-arrowscrollbox[orient="vertical"] {
-  overflow-y: auto;
+  min-height: 1px;
 
   &::part(scrollbutton-up),
   &::part(scrollbutton-down) {
